<resources>
    <string name="app_name">Bounce it</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start_screen">Bounce it</string>
    <string name="title_activity_highscores">Highscores</string>
    <string name="send_via">Send via</string>
    <string name="retry">Try again</string>
    <string name="diedMessage">Oh no, you died</string>
    <string name="high_score_congrats">Congrats, you are in the top ten"</string>
    <string name="scoreMessage">You had as score of: </string>
    <string name="deleteScores">Delete Highscores</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addGem">add Coin</string>
    <string name="resetGems">reset coins</string>
    <string name="title_activity_recommend_screen">RecommendScreen</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="send_thank_you_code_after_all">Ok, thank my friend and send the code</string>
    <string name="definately_no_thank_you_code">Nope, no free coin for my friend</string>
    <string name="enter_thank_you_code">enter thank you code</string>
    <string name="activate">Activate</string>
    <string name="gem">coin</string>
    <string name="get_more">"get more"</string>
    <string name="gems">coins</string>
    <string name="Do_you_want_to_buy_this_player">"Do you want to buy this player for "</string>
    <string name="sorry_not_enough">Sorry, not enough</string>
    <string name="player_bought_and_set">Player bought and set</string>
    <string name="player_set">Player set</string>
    <string name="unlock_for">unlock for</string>
    <string name="Select_this_player_question">Select this Player?</string>
    <string name="You_need_more_gems_do_you_want_to">You need more coins for this. Do you want to</string>
    <string name="reminder_to_send_activation_code">great, now don\'t forget to send the recommendation code so that you can both receive a free coin</string>
    <string name="message_wait_for_thank_you_code">cool, now wait for your friend to download the app, enter the code and send you the thank you code</string>
<<<<<<< HEAD
    <string name="recommendation_text">"Hi\nThis app \"bounce it\" is amazing. You should get it.\nhttps://play.google.com/store/apps/details?id=com.max.jumpingapp\nI will send you a code which you can enter to receive a free coin. Code (only valid today): "</string>
=======
    <string name="recommendation_text">"Hi\nThis app \"bounce it\" is amazing. You should get it.\nhttps://play.google.com/store/apps/details?id=com.maxrick.bounceit\nI will send you a code which you can enter to receive a free coin. Code (only valid today): "</string>
>>>>>>> c3da243c456de12dba1f29989fc34625e394212d
    <string name="congrats_free_gem">Congratulations, you received a free coin.</string>
    <string name="sorry_code_used">Sorry, this code has already been used</string>
    <string name="sorry_code_not_valid">Sorry, this code is not valid</string>
    <string name="also_thank_your_friend">" Thank your friend by giving him a code for a free coin also.\n\nThis code is only valid for the person who sent you your voucher code."</string>
    <string name="sure_no_thank_you_code_question">Are you sure you don\'t want to send your friend the free coin? After cancelling you won\'t have the possibility to send the code again.</string>
    <string name="get_free_coins">Get free coins</string>
    <string name="spend_coins">Spend coins</string>
    <string name="name">Name</string>
    <string name="recommend_instructions">Get more coins by recommending this App. Send an activation code to a friend. With this code your friend will get a free coin. \nMake sure your friend also sends you your thank you code back. Enter the thank you code below to receive your free coin.</string>
    <string name="first">First:</string>
    <string name="recommend_app">Recommend app</string>
    <string name="then">Then:</string>
    <string name="send_recommendation_code">Send recommendation code</string>
    <string name="delete_purchases">Delete purchases</string>
    <string name="play_game">Play Game</string>
    <string name="high_scores">High Scores</string>
    <string name="shop">Shop</string>
    <string name="tutorial">Tutorial</string>
    <string name="enter_recommendation_code">Enter code for free coin</string>
    <string name="sorry_code_only_for_others">Sorry, this code can only be used by other users</string>
    <string name="sorry_code_for_new_users">Sorry, this code is only valid for new users</string>
    <string name="help_page">Help</string>
    <string name="link">Credits:\nAndroid ImageSlider\nLicence: (MIT) https://github.com/daimajia/AndroidImageSlider/blob/master/LICENSE
        \n<div>Icons made by <a href="http://www.flaticon.com/authors/madebyoliver" title="Madebyoliver">Madebyoliver</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
        \n<div>Icons made by <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
    </string>
</resources>
