<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background2"
    tools:context=".views.StartScreen"><!--context was: max.jumping.StartScreen-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="buttonPlayClicked"
            android:background="@drawable/buttonshape"
            android:text="@string/play_game"
            android:layout_centerHorizontal="true"
            android:padding="30dp"
            android:layout_marginTop="100dp"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/tutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tutorial"
            android:layout_below="@+id/buttonPlay"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonsPane"
            android:layout_below="@+id/tutorial"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">
            <Button
                android:id="@+id/buttonScores"
                android:layout_width="@dimen/widthMenuButtons"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonshape"
                android:layout_gravity="center_horizontal|top"
                android:onClick="buttonHighScoresClicked"
                android:padding="15dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/high_scores" />

            <Button
                android:id="@+id/help_page"
                android:layout_width="@dimen/widthMenuButtons"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonshape"
                android:layout_gravity="center_horizontal|center_vertical"
                android:onClick="buttonRecommendAppClicked"
                android:padding="15dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/help_page" />

        </LinearLayout>

        <!--com.daimajia.slider.library.SliderLayout
            android:id="@+id/slider"
            android:layout_width="155dp"
            android:layout_height="190dp"
            android:clickable="true"
            android:layout_below="@+id/buttonsPane"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            /-->
        <fragment
            android:id="@+id/shop_fragment"
            android:name="layout.ShopFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonsPane"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:tag="shopFragment" />

        <fragment
            android:id="@+id/fragment"
            android:name="layout.GemFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:tag="gemFragment" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/recommendationCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:lines="1"
                android:hint="@string/enter_recommendation_code" />

            <Button
                android:id="@+id/activateRecommendationCodeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="buttonActivateRecommendationCodeClicked"
                android:background="@drawable/buttonshape_cornered"
                android:text="@string/activate" />
        </LinearLayout>

    </RelativeLayout>
</FrameLayout>